fixed overflow issue with movie cards container

--- a/src/components/cards/movieCard/Styles.css
+++ b/src/components/cards/movieCard/Styles.css
@@ -37,6 +37,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 5px;
 }
 
 .card_description_big {
